# tia

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  BACKEND_HANDOFF.md  CONTRACTS.md  Makefile  PROJECT_DETAILS.md  README.md  demo.sh  docker-compose.yml  tia.db
.claude/skills/: tia-month-close.md
.github/workflows/: ci.yml  eval.yml
apps/web/: .dockerignore  .env.development  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  AppShell.tsx  api.ts  hooks.ts  icebreakers.ts  index.css  lib.ts  store.ts  types.ts  ui.tsx
apps/web/src/components/: Assistant.tsx  AuditChainCard.tsx  ChatWidget.tsx  DocFocus.tsx  (+29 more)
apps/web/test/: App.padded.test.tsx  App.test.tsx  AppShell.cov.test.tsx  AppShell.test.tsx  api.test.ts  api.token.test.ts  api.uuid.test.ts  coverage.small.test.tsx  hooks.test.tsx  icebreakers.test.ts  lib.test.ts  setup.ts  smoke.test.tsx  store.test.ts
data/gold/: _last_run.json  case_01.json  case_02.json  case_03.json  case_04.json  case_05.json  case_06.json  case_07.json  case_08.json  case_09.json  case_10.json  case_11.json  case_12.json  case_13.json  case_14.json
data/synthetic/: case_02_email_employee.txt  case_06_email_structured.txt
deploy/: backup.sh  install.sh  tia-backup.service  tia-backup.timer  tia-deploy.service  tia-deploy.timer  update.sh
docs/: CONNECT.md  DEMO_SCRIPT.md
docs/deck/: TIA-deck.md
services/dispatch/: Cargo.toml
services/dispatch/src/: main.rs
workers/ai/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  tia.db
workers/ai/migrations/: env.py
workers/ai/migrations/versions/: 31bb83339cb0_baseline_schema.py
workers/ai/tests/: conftest.py  fake_llm.py  test_api.py  test_api_more.py  test_audit_chain.py  test_canonicalize.py  test_canonicalize_edges.py  test_clawback.py  test_cov_agent_stream_whatsapp.py  test_cov_api.py  test_cov_more_units.py  test_cov_orchestrator.py  test_cov_poller_sender.py  test_cov_rules_v2.py  test_cov_small_units.py  test_email.py  test_email_reply_handler.py  test_endpoints.py  test_endpoints_extra.py  test_env_portable_branches.py  test_erp_mock.py  test_eval_run.py  test_extract_email.py  test_extract_formats.py  test_extract_more.py  test_extract_vision.py  test_extract_vision_more.py  test_final_gaps.py  test_final_gaps2.py  test_final_gaps3.py  test_finance_leakage.py  test_finance_leakage_more.py  test_fsm.py  test_guard.py  test_hardening.py  test_hungarian.py  test_invoice_render.py  test_llm.py  test_llm_unit.py  test_mailbox_poller_io.py  (+31 more)
workers/ai/tia_ai/: __init__.py  audit.py  canonicalize.py  config.py  db.py  migrate.py  models.py  obs.py  orchestrator.py  ratelimit.py  retention.py  schema.py  seed.py  seed_contracts.py  synthgen.py  whatsapp.py
workers/ai/tia_ai/ai/: __init__.py  guard.py  llm.py
workers/ai/tia_ai/api/: __init__.py  app.py
workers/ai/tia_ai/erp/: __init__.py  mock.py  smart_bot_sap.py
workers/ai/tia_ai/eval/: __init__.py  run.py
workers/ai/tia_ai/extract/: __init__.py  email.py  email_attachments.py  excel.py  pdf.py  sniff.py  vision.py  word.py
workers/ai/tia_ai/finance/: __init__.py  leakage.py  recovery.py
workers/ai/tia_ai/integrations/: __init__.py
workers/ai/tia_ai/integrations/sap_b1/: __init__.py  client.py  mapping.py
workers/ai/tia_ai/invoice/: __init__.py  fsm.py  qr.py  render.py
workers/ai/tia_ai/mailbox/: __init__.py  demo_inject.py  poller.py  sender.py  test_creds.py
workers/ai/tia_ai/match/: __init__.py  hungarian.py  resolver.py
workers/ai/tia_ai/mcp/: __init__.py  server.py
workers/ai/tia_ai/ocr/: __init__.py
workers/ai/tia_ai/qa/: __init__.py  agent.py  streaming.py
workers/ai/tia_ai/validate/: __init__.py  rules.py  rules_v2.py
workers/whatsapp/: .dockerignore  .env.example  Dockerfile  README.md  package.json  tsconfig.json
workers/whatsapp/src/: app.ts  config.ts  ops.ts  server.ts  simulate.ts  simulator.ts  upstream.ts
workers/whatsapp/test/: dedup.test.ts  parse.test.ts  sender.test.ts  signature.test.ts  webhook.e2e.test.ts
(+108 files in other folders)
