[project]
name = "tia-ai"
version = "0.1.0"
description = "TIA AI/document workers: extraction, entity resolution, validation, OCR clients"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "rapidfuzz>=3.9",
    "scipy>=1.13",
    "jellyfish>=1.0",
    "pillow>=10.3",
    "imagehash>=4.3",
    "qrcode>=7.4",
    "openai>=1.50",
    "typst>=0.13",
    "python-dateutil>=2.9",
    "python-docx>=1.1",
    "xlrd>=2.0.1",
    "olefile>=0.47",
    "mcp>=1.0",
    "prometheus-client>=0.20",
]

[project.scripts]
tia-mcp = "tia_ai.mcp:run_stdio"

[project.optional-dependencies]
ocr = ["opencv-python-headless>=4.10"]
# Postgres 18 driver for production/container deployments (SQLite stays the default).
postgres = ["psycopg[binary]>=3.2"]
# Optional error tracking — init'd only when SENTRY_DSN is set (see obs.py).
sentry = ["sentry-sdk>=2.0"]
dev = ["pytest>=8.2", "ruff>=0.5", "pytest-cov>=5.0", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tia_ai"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.coverage.run]
# Non-product scripts excluded from coverage: these are manual, operator-run CLIs
# with no importable product logic — exercising them would mean driving argparse
# entrypoints that only open live IMAP/SMTP sockets or seed a dev mailbox.
#   test_creds.py  — manual Zoho credential checker (`python -m ...test_creds`)
#   demo_inject.py — dev-only helper that injects a demo email into a live INBOX
omit = [
    "tia_ai/mailbox/test_creds.py",
    "tia_ai/mailbox/demo_inject.py",
]

[tool.coverage.report]
# Lines that are intentionally not exercised by the hermetic suite.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
